Fix card details positioning on mobile

--- a/src/components/Cards/Card/Card.module.scss
+++ b/src/components/Cards/Card/Card.module.scss
@@ -82,8 +82,7 @@
 
 .CardDetailsWrap {
     display: flex;
-    justify-content: space-between;
-    width: 28%;
+    justify-content: start;
     margin-top: 2vw;
 }
 
@@ -94,6 +93,10 @@
     h4 {
         margin-left: 3px;
     }
+}
+
+.CardTimeWrap {
+    margin-right: 1vw;
 }
 
 .CardViewCopy {
@@ -141,7 +144,6 @@
     }
 
     .CardDetailsWrap {
-        width: 8vw;
         margin: 0.55vw 0 0 3px;
     }
 
@@ -150,6 +152,10 @@
         h4 {
             margin-left: 5px;
         }
+    }
+
+    .CardTimeWrap {
+        margin-right: 0.5vw;
     }
 
     .CardViewCopy {
@@ -162,10 +168,6 @@
 @media #{$mq-large} {
     .CardContentWrap {
         padding: 0.9vw 1vw;
-    }
-
-    .CardDetailsWrap {
-        width: 40%;
     }
 }
 
